Fix link colour in dark mode

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -18,6 +18,7 @@
     --vp-button-brand-text: #000000;
     --vp-button-brand-hover-text: #000000;
     --vp-button-brand-active-text: #000000;
+    --vp-c-brand: #43A4FF;
 }
 
 .VPHero .name,
